--- a/Vulkan_Engine/Vulkan_Engine.vcxproj.filters
+++ b/Vulkan_Engine/Vulkan_Engine.vcxproj.filters
@@ -26,9 +26,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EG.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="EG_Debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -39,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EG_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EG_Engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
