--- a/Vulkan_Engine/Vulkan_Engine.vcxproj.filters
+++ b/Vulkan_Engine/Vulkan_Engine.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EG.cpp">
+    <ClCompile Include="EG_Presentation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EG_Presentation.cpp">
+    <ClCompile Include="EG_Engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
